--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "webpack-dev-middleware": "^3.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
