--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/index.js",
-    "dev": "webpack --mode development && node server/index.js --open",
+    "dev": "webpack --mode development && node server/index.js",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -24,23 +24,19 @@
   },
   "homepage": "https://github.com/thewasta/simple-chat#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "file-loader": "^4.2.0",
     "jquery": "^3.4.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-router-dom": "^5.1.2",
-    "socket.io": "^2.3.0",
-    "webpack-dev-middleware": "^3.7.2"
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
     "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^4.5.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "html-webpack-plugin": "^3.2.0",
@@ -55,6 +51,13 @@
     "terser-webpack-plugin": "^2.1.3",
     "url-loader": "^2.1.0",
     "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
+    "webpack-assets-manifest": "^3.1.1",
+    "webpack-cli": "^3.3.9",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.1.0",
+    "file-loader": "^4.2.0",
+    "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.2",
+    "webpack-dev-middleware": "^3.7.2"
   }
 }
